--- a/app/src/main/res/layout/item_home_sign_top.xml
+++ b/app/src/main/res/layout/item_home_sign_top.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dimen_2dp"
-    android:background="@drawable/jb_shape_theme_top"
+    android:background="@drawable/jb_shape_theme_top_1"
     android:orientation="vertical">
 
     <TextView
@@ -14,18 +15,18 @@
         android:layout_marginTop="@dimen/dp_10"
         android:background="@drawable/bj_circle_btm"
         android:gravity="center"
-        android:text="+10"
-        android:visibility="visible"
-        android:textColor="@color/color_text_theme"
-        android:textSize="@dimen/dp_10" />
+        android:text="+0"
+        android:textColor="#666666"
+        android:textSize="@dimen/dp_10"
+        android:visibility="visible" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/tv"
-        android:visibility="invisible"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_sign_lw" />
+        android:src="@drawable/ic_sign_lw"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/tv_day"
