--- a/app/src/main/res/layout/splashscreen.xml
+++ b/app/src/main/res/layout/splashscreen.xml
@@ -40,6 +40,7 @@
         android:gravity="center_vertical"
         android:paddingStart="@dimen/dimen_50dp"
         android:paddingTop="@dimen/dp_10"
+        android:visibility="invisible"
         android:paddingEnd="@dimen/dimen_50dp"
         android:paddingBottom="@dimen/dp_10"
         android:text="有健身器材去添加"
@@ -52,6 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_go"
         android:layout_centerHorizontal="true"
+        android:visibility="invisible"
         android:layout_marginTop="30dp"
         android:src="@drawable/icon_splash_2" />
 
@@ -65,6 +67,7 @@
         android:background="@drawable/btn_shape_bj_f2_25"
         android:drawableStart="@drawable/icon_splash_3"
         android:drawablePadding="@dimen/dp_10"
+        android:visibility="invisible"
         android:gravity="center_vertical"
         android:paddingStart="@dimen/dimen_50dp"
         android:paddingTop="@dimen/dp_10"
