--- a/app/src/main/res/layout/item_home_dynamic.xml
+++ b/app/src/main/res/layout/item_home_dynamic.xml
@@ -84,12 +84,26 @@
             android:src="@mipmap/ic_7"
             android:visibility="gone" />
 
-        <ImageView
-            android:id="@+id/siv_4"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_220dp"
-            android:scaleType="center"
-            android:src="@mipmap/ic_7" />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/siv_4"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_220dp"
+                android:scaleType="center"
+                android:src="@mipmap/ic_7" />
+
+            <ImageView
+                android:id="@+id/iv_baofang"
+                android:layout_width="@dimen/dimen_45dp"
+                android:layout_height="@dimen/dimen_45dp"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                android:src="@drawable/ic_baofang" />
+        </RelativeLayout>
+
 
     </LinearLayout>
 
