--- a/app/src/main/res/layout/item_home_two_task_select.xml
+++ b/app/src/main/res/layout/item_home_two_task_select.xml
@@ -94,6 +94,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_incrementValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="20"
@@ -102,6 +103,7 @@
 
 
                 <TextView
+                    android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_10"
@@ -120,6 +122,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_target"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="20"
@@ -127,6 +130,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/tv_paramName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_10"
@@ -232,6 +236,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_incrementValue1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="20"
@@ -240,6 +245,7 @@
 
 
                 <TextView
+                    android:id="@+id/tv_name1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_10"
@@ -258,6 +264,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_target1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="20"
@@ -265,6 +272,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/tv_paramName1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_10"
