--- a/app/src/main/res/layout/fragment_home_four.xml
+++ b/app/src/main/res/layout/fragment_home_four.xml
@@ -57,12 +57,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="@dimen/dimen_25dp"
+                    android:layout_marginTop="@dimen/dimen_15dp"
                     android:gravity="center"
-                    android:padding="@dimen/dimen_15dp"
+                    android:padding="@dimen/dp_10"
                     android:text="个人中心"
                     android:textColor="@color/color_ffffff"
-                    android:textSize="@dimen/dimen_20dp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <ImageView
@@ -71,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimen_25dp"
                     android:layout_toStartOf="@id/on_iv_msg"
-                    android:padding="@dimen/dimen_15dp"
+                    android:padding="@dimen/dp_10"
                     android:src="@drawable/icon_mine_set" />
 
                 <ImageView
@@ -81,7 +81,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="@dimen/dimen_25dp"
                     android:layout_marginEnd="@dimen/dp_10"
-                    android:padding="@dimen/dimen_15dp"
+                    android:padding="@dimen/dp_10"
                     android:src="@drawable/icon_mine_msg" />
             </RelativeLayout>
 
