--- a/app/src/main/res/layout/fragment_home_one.xml
+++ b/app/src/main/res/layout/fragment_home_one.xml
@@ -18,10 +18,10 @@
             android:drawableStart="@drawable/icon_home_left"
             android:drawablePadding="@dimen/dimen_5dp"
             android:gravity="center"
-            android:padding="@dimen/dimen_15dp"
+            android:padding="@dimen/dp_10"
             android:text="设备管理"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/dimen_16dp" />
+            android:textSize="@dimen/sp_14" />
 
 
         <TextView
@@ -29,10 +29,10 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:padding="@dimen/dimen_15dp"
+            android:padding="@dimen/dp_10"
             android:text="首 页"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/dimen_20dp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
@@ -43,10 +43,10 @@
             android:drawableStart="@drawable/icon_home_right"
             android:gravity="center"
             android:includeFontPadding="false"
-            android:padding="@dimen/dimen_15dp"
+            android:padding="@dimen/dp_10"
             android:text="心率"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/dimen_16dp" />
+            android:textSize="@dimen/sp_14" />
     </RelativeLayout>
 
     <androidx.core.widget.NestedScrollView
