--- a/app/src/main/res/layout/fragment_home_three.xml
+++ b/app/src/main/res/layout/fragment_home_three.xml
@@ -16,13 +16,13 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/dimen_50dp"
             android:layout_marginStart="@dimen/dimen_15dp"
-            android:layout_marginTop="@dimen/dimen_25dp"
+            android:layout_marginTop="@dimen/dimen_15dp"
             android:layout_weight="1"
             android:background="@drawable/ic_shade_img"
             android:drawableStart="@drawable/ic_search"
             android:drawablePadding="@dimen/dp_10"
             android:gravity="center_vertical"
-            android:padding="@dimen/dimen_15dp"
+            android:padding="@dimen/dp_10"
             android:text="搜索内容或圈子"
             android:textColor="@color/color_999999"
             android:textFontWeight="1"
@@ -35,15 +35,15 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="@dimen/dimen_15dp"
-            android:layout_marginTop="@dimen/dimen_25dp"
+            android:layout_marginTop="@dimen/dimen_15dp"
             android:drawableStart="@drawable/ic_bianji"
             android:drawablePadding="@dimen/dp_10"
             android:gravity="center"
             android:includeFontPadding="false"
-            android:padding="@dimen/dimen_15dp"
+            android:padding="@dimen/dp_10"
             android:text="动态"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/dimen_16dp" />
+            android:textSize="@dimen/sp_14" />
     </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
