--- a/app/src/main/res/layout/fragment_home_two.xml
+++ b/app/src/main/res/layout/fragment_home_two.xml
@@ -9,7 +9,7 @@
         android:id="@+id/rl_actionbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimen_25dp">
+        android:layout_marginTop="@dimen/dimen_15dp">
 
         <TextView
             android:id="@+id/tv_left_text"
@@ -30,10 +30,10 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:padding="@dimen/dimen_15dp"
+            android:padding="@dimen/dp_10"
             android:text="运 动"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/dimen_20dp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
@@ -96,14 +96,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_1"
-                    android:layout_marginTop="@dimen/dp_10"
+                    android:layout_marginTop="9dp"
                     android:text="运动设备未连接"
                     android:textColor="@color/color_999999"
                     android:textSize="@dimen/sp_14" />
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/dimen_50dp"
+                    android:layout_height="@dimen/dimen_50dp"
                     android:layout_alignParentEnd="true"
                     android:src="@mipmap/ic_2" />
 
@@ -112,7 +112,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_margin="@dimen/dimen_15dp"
+                android:layout_margin="@dimen/dimen_10dp"
                 android:background="#F7F7F7" />
 
 
@@ -136,7 +136,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_2"
-                    android:layout_marginTop="@dimen/dp_10"
+                    android:layout_marginTop="@dimen/dimen_2dp"
                     android:layout_toEndOf="@id/iv_two_img"
                     android:text="2020.07.12  15:32"
                     android:textColor="@color/color_999999"
@@ -147,7 +147,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_2"
                     android:layout_marginStart="@dimen/dp_10"
-                    android:layout_marginTop="@dimen/dp_10"
+                    android:layout_marginTop="@dimen/dimen_2dp"
                     android:layout_toEndOf="@id/tv_time"
                     android:drawableStart="@drawable/ic_yun_dong"
                     android:drawablePadding="@dimen/dimen_5dp"
@@ -159,7 +159,9 @@
                     android:id="@+id/iv_two_img"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/dp_10"
+                    android:layout_alignTop="@id/tv_2"
+                    android:layout_alignBottom="@id/tv_time"
+                    android:adjustViewBounds="true"
                     android:src="@mipmap/ic_2" />
 
                 <TextView
