--- a/app/src/main/res/layout/include_titlebar_common.xml
+++ b/app/src/main/res/layout/include_titlebar_common.xml
@@ -36,10 +36,10 @@
         android:layout_marginRight="@dimen/dimen_30dp"
         android:gravity="center"
         android:includeFontPadding="false"
-        android:padding="@dimen/dimen_15dp"
+        android:padding="@dimen/dp_10"
         android:singleLine="true"
         android:textColor="@color/color_333333"
-        android:textSize="@dimen/dimen_20dp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
@@ -51,7 +51,7 @@
         android:includeFontPadding="false"
         android:text=""
         android:textColor="@color/color_333333"
-        android:textSize="@dimen/dimen_16dp" />
+        android:textSize="@dimen/sp_14" />
 
     <TextView
         android:id="@+id/tv_righttext"
@@ -62,7 +62,7 @@
         android:layout_centerVertical="true"
         android:gravity="center"
         android:includeFontPadding="false"
-        android:textSize="@dimen/dimen_16dp" />
+        android:textSize="@dimen/sp_14" />
 
     <ImageView
         android:id="@+id/iv_rightimg"
