--- a/app/src/main/res/layout/item_home_two_top.xml
+++ b/app/src/main/res/layout/item_home_two_top.xml
@@ -12,10 +12,11 @@
         android:src="@mipmap/ic_8" />
 
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignStart="@id/iv_icon"
         android:layout_alignEnd="@id/iv_icon"
+        android:adjustViewBounds="true"
         android:background="@drawable/btn_shape_bj_000" />
 
     <TextView
@@ -81,8 +82,8 @@
         android:textSize="10sp" />
 
     <ImageView
-        android:layout_width="@dimen/dimen_30dp"
-        android:layout_height="@dimen/dimen_30dp"
+        android:layout_width="@dimen/dimen_24dp"
+        android:layout_height="@dimen/dimen_24dp"
         android:layout_alignEnd="@id/iv_icon"
         android:layout_marginTop="@dimen/dimen_30dp"
         android:layout_marginEnd="@dimen/dimen_15dp"
