--- a/app/src/main/res/layout/activity_mine_integral.xml
+++ b/app/src/main/res/layout/activity_mine_integral.xml
@@ -31,7 +31,7 @@
             android:gravity="center"
             android:text="卡路里积分"
             android:textColor="@color/color_ffffff"
-            android:textSize="@dimen/dimen_20dp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
@@ -46,7 +46,7 @@
             android:padding="@dimen/dimen_15dp"
             android:text="规则"
             android:textColor="@color/color_ffffff"
-            android:textSize="@dimen/dimen_16dp" />
+            android:textSize="@dimen/sp_14" />
     </RelativeLayout>
 
 
@@ -71,7 +71,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:text="1050"
+                    android:text="0"
                     android:textColor="@color/color_ffffff"
                     android:textSize="36sp"
                     android:textStyle="bold" />
@@ -106,7 +106,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="888"
+                        android:text="0"
                         android:textColor="@color/color_333333"
                         android:textSize="22sp"
                         android:textStyle="bold" />
@@ -132,7 +132,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="888"
+                        android:text="0"
                         android:textColor="@color/color_333333"
                         android:textSize="22sp"
                         android:textStyle="bold" />
