--- a/app/src/main/res/layout/activity_task_selection.xml
+++ b/app/src/main/res/layout/activity_task_selection.xml
@@ -15,7 +15,6 @@
             android:id="@+id/iv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
             android:src="@mipmap/ic_task_sele_top"
             android:visibility="invisible" />
 
@@ -34,18 +33,6 @@
             android:adjustViewBounds="true"
             android:background="@drawable/btn_shape_bj_fff" />
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:padding="@dimen/dimen_15dp"
-            android:text=""
-            android:textColor="@color/color_ffffff"
-            android:textSize="@dimen/dimen_20dp"
-            android:textStyle="bold" />
-
         <TextView
             android:id="@+id/tv_tiao_guo"
             android:layout_width="wrap_content"
@@ -56,7 +43,7 @@
             android:padding="@dimen/dimen_15dp"
             android:text="跳过"
             android:textColor="@color/color_ffffff"
-            android:textSize="@dimen/dimen_15dp"
+            android:textSize="@dimen/sp_14"
             android:textStyle="bold" />
 
     </RelativeLayout>
