--- a/app/src/main/res/layout/activity_task_start.xml
+++ b/app/src/main/res/layout/activity_task_start.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:text="设备管理"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/dimen_20dp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <ImageView
@@ -35,7 +35,6 @@
             android:layout_alignBottom="@id/tv_1"
             android:layout_marginStart="@dimen/dp_10"
             android:layout_toRightOf="@id/tv_1"
-            android:background="@drawable/bj_shape_line_66_6"
             android:padding="@dimen/dimen_5dp"
             android:scaleType="center"
             android:src="@drawable/icon_jiantou_you_00" />
@@ -45,14 +44,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_1"
-            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginTop="9dp"
             android:text="智能椭圆机——已连接"
             android:textColor="@color/color_999999"
             android:textSize="@dimen/sp_14" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dimen_50dp"
+            android:layout_height="@dimen/dimen_50dp"
             android:layout_alignParentEnd="true"
             android:src="@mipmap/ic_2" />
     </RelativeLayout>
@@ -65,7 +64,7 @@
         <LinearLayout
             android:id="@+id/ll_kcxz"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_60dp"
+            android:layout_height="@dimen/dimen_55dp"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="@dimen/dimen_30dp"
             android:layout_marginEnd="@dimen/dimen_30dp"
@@ -89,7 +88,7 @@
         <LinearLayout
             android:id="@+id/ll_xlkz"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_60dp"
+            android:layout_height="@dimen/dimen_55dp"
             android:layout_above="@id/ll_kcxz"
             android:layout_marginStart="@dimen/dimen_30dp"
             android:layout_marginEnd="@dimen/dimen_30dp"
