--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -21,29 +21,30 @@
                 android:id="@+id/iv_back"
                 android:layout_width="@dimen/dimen_30dp"
                 android:layout_height="@dimen/dimen_30dp"
-                android:layout_alignTop="@id/iv_icon"
                 android:layout_marginStart="@dimen/common_margin_26"
+                android:layout_alignTop="@id/tv_title"
                 android:src="@drawable/icon_back_h" />
 
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/iv_icon"
                 android:layout_marginStart="@dimen/common_margin_26"
+                android:layout_marginTop="@dimen/dimen_50dp"
                 android:gravity="center_vertical"
                 android:lineSpacingExtra="@dimen/dimen_20dp"
-                android:text="忘记密码"
+                android:text="\n忘记密码"
                 android:textColor="@color/color_333333"
-                android:textSize="@dimen/dimen_25dp"
+                android:textSize="25sp"
                 android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/iv_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignTop="@id/tv_title"
+                android:layout_alignBottom="@id/tv_title"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="@dimen/dimen_50dp"
                 android:layout_marginEnd="@dimen/common_margin_26"
                 android:src="@mipmap/icon_app_logo" />
 
@@ -54,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/iv_icon"
                 android:layout_marginHorizontal="@dimen/common_margin_26"
-                android:layout_marginTop="@dimen/dimen_80dp">
+                android:layout_marginTop="@dimen/dimen_50dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -261,7 +262,7 @@
                     android:layout_below="@id/iv_line"
                     android:layout_marginTop="@dimen/dp_10"
                     android:gravity="center"
-                    android:visibility="invisible">
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="wrap_content"
