--- a/app/src/main/res/layout/activity_rate_pattern.xml
+++ b/app/src/main/res/layout/activity_rate_pattern.xml
@@ -26,7 +26,6 @@
             android:layout_alignTop="@id/tv"
             android:layout_alignBottom="@id/tv"
             android:layout_marginStart="@dimen/dimen_25dp"
-            android:background="@drawable/bj_shape_line_f2_5"
             android:paddingHorizontal="@dimen/dimen_5dp"
             android:src="@drawable/icon_jiantou_zuo_ff" />
 
@@ -48,7 +47,7 @@
             android:gravity="center"
             android:text=""
             android:textColor="@color/color_ffffff"
-            android:textSize="@dimen/dimen_20dp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
 
