--- a/app/src/main/res/layout/item_circle_dynamic.xml
+++ b/app/src/main/res/layout/item_circle_dynamic.xml
@@ -117,6 +117,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_220dp"
             android:scaleType="center"
+            android:visibility="gone"
             android:src="@mipmap/ic_7" />
 
     </LinearLayout>
