--- a/app/src/main/res/layout/item_association_list.xml
+++ b/app/src/main/res/layout/item_association_list.xml
@@ -2,8 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
+
 
     <View
         android:layout_width="match_parent"
@@ -13,7 +14,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dimen_15dp"
+        android:layout_marginHorizontal="@dimen/dimen_15dp"
+        android:layout_marginVertical="@dimen/dp_10"
         android:background="@color/color_ffffff"
         android:orientation="vertical">
 
@@ -49,9 +51,10 @@
 
         <com.jxkj.fit_5a.conpoment.view.RoundImageView
             android:id="@+id/iv_head_img"
-            android:layout_width="38dp"
-            android:layout_height="38dp"
-            android:layout_margin="@dimen/dp_10"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignTop="@id/tv_name"
+            android:layout_marginHorizontal="@dimen/dp_10"
             android:src="@mipmap/ic_6"
             app:radius="@dimen/dimen_30dp"
             app:type="circle" />
@@ -60,7 +63,7 @@
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@id/iv_head_img"
+            android:layout_marginTop="@dimen/dp_10"
             android:layout_toEndOf="@id/iv_head_img"
             android:text="吴帅帅"
             android:textColor="@color/color_333333"
@@ -70,7 +73,8 @@
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/iv_head_img"
+            android:layout_below="@id/tv_name"
+            android:layout_marginTop="@dimen/dimen_2dp"
             android:layout_toEndOf="@id/iv_head_img"
             android:text="2002-15-16"
             android:textColor="@color/color_999999"
@@ -80,12 +84,13 @@
         <com.youth.banner.Banner
             android:id="@+id/banner"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_250dp"
+            android:layout_height="@dimen/dimen_220dp"
+            android:layout_marginTop="@dimen/dp_10"
             android:layout_below="@id/iv_head_img"
+            android:visibility="gone"
             android:background="@color/color_999999"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:visibility="gone"
             app:indicator_drawable_selected="@mipmap/banner_selected"
             app:indicator_drawable_unselected="@mipmap/banner_unselected" />
 
@@ -95,7 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/banner"
             android:layout_margin="@dimen/dp_10"
-            android:text="内容内容内容内容内容内容内容内容内容内容"
+            android:text=""
             android:textColor="@color/color_333333"
             android:textSize="14sp" />
 
@@ -110,7 +115,7 @@
             android:paddingHorizontal="@dimen/dimen_15dp"
             android:paddingVertical="@dimen/dimen_5dp"
             android:textColor="@color/color_333333"
-            android:textSize="12sp"
+            android:textSize="10sp"
             android:visibility="gone" />
 
 
@@ -120,16 +125,17 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_address"
             android:layout_marginStart="@dimen/dp_10"
+            android:visibility="gone"
             android:layout_marginTop="@dimen/dimen_5dp"
             android:background="@drawable/btn_shape_bj_theme_99"
             android:drawableStart="@drawable/ic_topic_jin"
             android:drawablePadding="@dimen/dimen_5dp"
-            android:paddingHorizontal="@dimen/dimen_15dp"
-            android:paddingVertical="@dimen/dimen_5dp"
+            android:gravity="center"
+            android:paddingHorizontal="@dimen/dp_10"
+            android:paddingVertical="@dimen/dimen_3dp"
             android:text="来自话题：晒出话题话题"
             android:textColor="@color/color_333333"
-            android:textSize="14sp"
-            android:visibility="gone" />
+            android:textSize="12sp" />
 
         <LinearLayout
             android:id="@+id/ll_pl"
@@ -139,8 +145,8 @@
             android:layout_marginTop="@dimen/dimen_20dp"
             android:background="@drawable/btn_shape_bj_7f7_10"
             android:orientation="vertical"
-            android:padding="@dimen/dimen_15dp"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:padding="@dimen/dp_10">
 
             <RelativeLayout
                 android:id="@+id/rl_pl_1"
@@ -149,8 +155,8 @@
 
                 <com.jxkj.fit_5a.conpoment.view.RoundImageView
                     android:id="@+id/iv_head_1"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="@dimen/dimen_25dp"
+                    android:layout_height="@dimen/dimen_25dp"
                     android:layout_marginEnd="@dimen/dimen_15dp"
                     android:src="@mipmap/ic_6"
                     app:type="circle" />
@@ -186,8 +192,8 @@
 
                     <com.jxkj.fit_5a.conpoment.view.RoundImageView
                         android:id="@+id/iv_head_11"
-                        android:layout_width="@dimen/dimen_25dp"
-                        android:layout_height="@dimen/dimen_25dp"
+                        android:layout_width="@dimen/dimen_20dp"
+                        android:layout_height="@dimen/dimen_20dp"
                         android:layout_marginEnd="@dimen/dimen_15dp"
                         android:src="@mipmap/ic_6"
                         app:type="circle" />
@@ -267,8 +273,8 @@
 
                 <com.jxkj.fit_5a.conpoment.view.RoundImageView
                     android:id="@+id/iv_head_2"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="@dimen/dimen_25dp"
+                    android:layout_height="@dimen/dimen_25dp"
                     android:layout_marginEnd="@dimen/dimen_15dp"
                     android:src="@mipmap/ic_6"
                     app:type="circle" />
@@ -304,8 +310,8 @@
 
                     <com.jxkj.fit_5a.conpoment.view.RoundImageView
                         android:id="@+id/iv_head_21"
-                        android:layout_width="@dimen/dimen_25dp"
-                        android:layout_height="@dimen/dimen_25dp"
+                        android:layout_width="@dimen/dimen_20dp"
+                        android:layout_height="@dimen/dimen_20dp"
                         android:layout_marginEnd="@dimen/dimen_15dp"
                         android:src="@mipmap/ic_6"
                         app:type="circle" />
@@ -381,7 +387,7 @@
                 android:id="@+id/rl_all_comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="@dimen/dimen_15dp">
+                android:layout_marginTop="@dimen/dp_10">
 
                 <View
                     android:layout_width="match_parent"
@@ -406,7 +412,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/ll_pl"
-            android:layout_marginTop="@dimen/dimen_20dp">
+            android:layout_marginTop="@dimen/dp_10">
 
 
             <TextView
