--- a/app/src/main/res/layout/item_mine_issue.xml
+++ b/app/src/main/res/layout/item_mine_issue.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="@dimen/dimen_15dp">
 
@@ -29,19 +30,15 @@
         android:textColor="@color/color_333333"
         android:textSize="15sp" />
 
-    <TextView
+    <WebView
         android:id="@+id/tv_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_title"
         android:layout_marginStart="@dimen/dp_10"
-        android:layout_marginTop="@dimen/dp_10"
-        android:layout_toEndOf="@id/tv_num"
-        android:lineSpacingExtra="@dimen/dimen_5dp"
-        android:text="点断利部华形青如劳度候算新物形点断利部华形青如劳度候算新物形点断利部华形青如劳度候算新物形点断利部华形青如劳度候算新物形点断利部华形青如劳度候算新物形点"
-        android:textColor="@color/color_333333"
-        android:textSize="13sp"
-        android:visibility="gone" />
+        android:layout_below="@id/tv_title"
+        android:scrollbars="none"
+        android:visibility="gone"
+        tools:ignore="WebViewLayout" />
 
     <View
         android:layout_width="match_parent"
