--- a/app/src/main/res/layout/activity_rate_pattern.xml
+++ b/app/src/main/res/layout/activity_rate_pattern.xml
@@ -15,7 +15,6 @@
             android:id="@+id/iv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
             android:src="@mipmap/ic_task_sele_top"
             android:visibility="invisible" />
 
@@ -344,6 +343,7 @@
             </RelativeLayout>
 
             <LinearLayout
+                android:id="@+id/ll_lat"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_55dp"
                 android:layout_marginHorizontal="@dimen/dimen_15dp"
