--- a/app/src/main/res/layout/activity_rate_pattern.xml
+++ b/app/src/main/res/layout/activity_rate_pattern.xml
@@ -15,7 +15,7 @@
             android:id="@+id/iv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_task_sele_top"
+            android:src="@mipmap/ic_mine_top"
             android:visibility="invisible" />
 
         <ImageView
@@ -33,7 +33,6 @@
             android:layout_height="match_parent"
             android:layout_alignTop="@id/iv"
             android:layout_alignBottom="@id/iv"
-            android:adjustViewBounds="true"
             android:background="@drawable/btn_shape_bj_fff" />
 
 
