--- a/app/src/main/res/layout/item_home_top.xml
+++ b/app/src/main/res/layout/item_home_top.xml
@@ -8,10 +8,10 @@
 
     <ImageView
         android:id="@+id/iv_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/tv_name"
-        android:layout_alignBottom="@id/tv_name"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:scaleType="center"
+        android:background="@drawable/bj_circle_fde5e5"
         android:src="@drawable/icon_home_kll" />
 
     <TextView
