--- a/app/src/main/res/layout/item_rate_pattern.xml
+++ b/app/src/main/res/layout/item_rate_pattern.xml
@@ -8,12 +8,11 @@
 
     <ImageView
         android:id="@+id/iv_icon"
-        android:layout_width="@dimen/dimen_30dp"
-        android:layout_height="@dimen/dimen_30dp"
+        android:layout_width="@dimen/dimen_25dp"
+        android:layout_height="@dimen/dimen_25dp"
         android:layout_alignTop="@id/tv_name"
-        android:background="@drawable/bj_circle_dot_theme"
         android:scaleType="center"
-        android:src="@drawable/icon_home_kll" />
+        android:src="@drawable/ic_rate_1" />
 
     <TextView
         android:id="@+id/tv_name"
