--- a/app/src/main/res/layout/item_history_equipment.xml
+++ b/app/src/main/res/layout/item_history_equipment.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/dimen_15dp"
-    android:background="@color/color_ffffff"
+    android:layout_margin="@dimen/dp_10"
+    android:background="@drawable/bj_circle_fff_10"
     android:orientation="vertical">
 
     <TextView
@@ -37,13 +37,12 @@
         android:textColor="@color/color_808080"
         android:textSize="10sp" />
 
-    <com.jxkj.fit_5a.conpoment.view.RoundImageView
+    <ImageView
         android:id="@+id/iv_head_img"
         android:layout_width="38dp"
         android:layout_height="38dp"
         android:layout_margin="@dimen/dp_10"
-        android:src="@mipmap/ic_6"
-        app:type="circle" />
+        android:src="@mipmap/ic_6" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -60,19 +59,11 @@
             android:textColor="@color/color_333333"
             android:textSize="15sp" />
 
-        <ImageView
-            android:id="@+id/iv_xb"
-            android:layout_width="@dimen/common_margin_15"
-            android:layout_height="@dimen/common_margin_15"
-            android:layout_marginStart="@dimen/dp_10"
-            android:layout_toEndOf="@id/tv_user_name"
-            android:src="@drawable/icon_xb_nan" />
-
         <TextView
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/iv_xb"
+            android:layout_below="@id/tv_user_name"
             android:layout_marginTop="@dimen/dimen_5dp"
             android:text="2002-15-16"
             android:textColor="@color/color_999999"
