--- a/app/src/main/res/layout/fragment_home_one.xml
+++ b/app/src/main/res/layout/fragment_home_one.xml
@@ -102,7 +102,7 @@
                 android:layout_marginTop="-50dp"
                 android:background="@drawable/ic_shade_img">
 
-                <com.jxkj.fit_5a.AAChartCoreLib.AAChartCreator.AAChartView
+                <com.jxkj.fit_5a.AAChartCoreLib.AAChartCreator.AAChartViewOne
                     android:id="@+id/AAChartView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
