--- a/app/src/main/res/layout/activity_create_circle.xml
+++ b/app/src/main/res/layout/activity_create_circle.xml
@@ -403,7 +403,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/dp_10"
-                            android:lineSpacingExtra="@dimen/dp_10"
+                            android:lineSpacingExtra="@dimen/dimen_5dp"
                             android:text="@string/jianli_shuoming"
                             android:textColor="@color/color_999999"
                             android:textSize="11sp" />
