--- a/app/src/main/res/layout/item_circle_dynamic.xml
+++ b/app/src/main/res/layout/item_circle_dynamic.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/iv_head_img"
         android:layout_toEndOf="@id/iv_head_img"
-        android:text="吴帅帅"
+        android:text="--"
         android:textColor="@color/color_333333"
         android:textSize="14sp" />
 
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/iv_head_img"
         android:layout_toEndOf="@id/iv_head_img"
-        android:text="2002-15-16"
+        android:text="--"
         android:textColor="@color/color_999999"
         android:textSize="12sp" />
 
@@ -41,7 +41,7 @@
         android:layout_below="@id/iv_head_img"
         android:layout_marginHorizontal="@dimen/dp_10"
         android:maxLines="2"
-        android:text="内容内容内容内容内容内容内容内容内容内容"
+        android:text="--"
         android:textColor="@color/color_333333"
         android:textSize="14sp" />
 
@@ -131,7 +131,7 @@
         android:layout_below="@id/rv_img_list"
         android:layout_marginStart="@dimen/dimen_5dp"
         android:padding="@dimen/dp_10"
-        android:text="浏览 3511 次"
+        android:text="浏览 0 次"
         android:textColor="@color/color_666666"
         android:textSize="14sp" />
 
@@ -154,7 +154,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:padding="@dimen/dp_10"
-            android:text="1358"
+            android:text="0"
             android:textColor="@color/color_999999" />
 
 
@@ -171,7 +171,7 @@
         android:drawablePadding="@dimen/dimen_5dp"
         android:gravity="center_vertical"
         android:padding="@dimen/dp_10"
-        android:text="1358"
+        android:text="0"
         android:textColor="@color/color_999999" />
 
 
