--- a/app/src/main/res/layout/item_home_top.xml
+++ b/app/src/main/res/layout/item_home_top.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="@dimen/dimen_75dp"
+    android:layout_height="@dimen/dimen_70dp"
     android:layout_marginStart="@dimen/dp_10"
+    android:gravity="center"
     android:background="@drawable/ic_shade_img"
-    android:padding="@dimen/dimen_15dp">
+    android:padding="@dimen/dp_10">
 
     <ImageView
         android:id="@+id/iv_icon"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
         android:scaleType="center"
         android:background="@drawable/bj_circle_fde5e5"
         android:src="@drawable/icon_home_kll" />
@@ -19,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_10"
+        android:textSize="12sp"
         android:layout_toEndOf="@id/iv_icon"
         android:text="卡路里"
         android:textColor="@color/color_333333" />
