--- a/app/src/main/res/layout/activity_exercise_record.xml
+++ b/app/src/main/res/layout/activity_exercise_record.xml
@@ -23,7 +23,7 @@
             android:id="@+id/iv_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/dimen_15dp"
+            android:padding="@dimen/dp_10"
             android:src="@drawable/icon_jiantou_zuo_ff" />
 
         <ImageView
@@ -36,15 +36,26 @@
 
 
         <TextView
+            android:id="@id/tv1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_below="@id/iv_back"
             android:gravity="center"
-            android:padding="@dimen/dimen_15dp"
-            android:text=""
+            android:padding="@dimen/dp_10"
+            android:text="运动记录"
             android:textColor="@color/color_ffffff"
-            android:textSize="@dimen/dimen_20dp"
+            android:textSize="18sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv1"
+            android:gravity="center"
+            android:paddingHorizontal="@dimen/dp_10"
+            android:text="Heart rate pattern"
+            android:textColor="#F5F5F5"
+            android:textSize="12sp"/>
 
         <TextView
             android:id="@+id/tv_sb"
@@ -54,11 +65,13 @@
             android:layout_marginEnd="@dimen/dp_10"
             android:drawableStart="@drawable/icon_home_left_b"
             android:drawableEnd="@drawable/icon_jiantou_xia_ff"
+            android:layout_alignBottom="@id/iv_back"
             android:drawablePadding="@dimen/dimen_5dp"
-            android:padding="@dimen/dimen_15dp"
+            android:layout_alignTop="@id/iv_back"
+            android:gravity="center"
             android:text="器材筛选"
             android:textColor="@color/color_ffffff"
-            android:textSize="@dimen/dimen_15dp"
+            android:textSize="14sp"
             android:textStyle="bold" />
 
     </RelativeLayout>
@@ -67,7 +80,7 @@
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/dimen_75dp"
+        android:layout_marginTop="@dimen/dimen_60dp"
         app:srlAccentColor="#00000000"
         app:srlEnablePreviewInEditMode="true"
         app:srlPrimaryColor="#00000000">
