--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -107,6 +107,12 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="Dialog_Fullscreen1">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@color/transparent</item>
+    </style>
+
     <style name="mProgressBarStyle" parent="@android:style/Widget.ProgressBar.Horizontal">
         <item name="android:maxHeight">50dp</item>
         <item name="android:minHeight">10dp</item>
